Revert "Avoid card jumping while loading"
This reverts commit 81ac88dd54c60d6e63b6ebf0206ae528cbbc741c.

--- a/src/components/App.module.css
+++ b/src/components/App.module.css
@@ -9,7 +9,7 @@
 .photoGrid {
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
+  justify-content: center;
   gap: var(--space-md);
 }
 
